--- a/themes/mythical_labyrinth_escape/templates/puzzle3.html
+++ b/themes/mythical_labyrinth_escape/templates/puzzle3.html
@@ -49,11 +49,11 @@
                     <div id="left" class="bg-light text-center text-dark ml-2" style="height:100px; width:100%; display:inline-block;">
                         <div>
                             <p>Hint:</p>
-                            {{puzzle.hint}}
+                            {{this_puzzle.hint}}
                         </div>
                     </div>
                     <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:300px; width:100%; display:inline-block;">
-                        <div>{{puzzle.story}}</div>
+                        <div>{{this_puzzle.story}}</div>
                     </div>
                     <div id="left" class="col-sm-12 bg-light text-center text-dark ml-2" style="height:150px; width:100%; display:inline-block;">
                         <div>Inventory</div>
@@ -68,15 +68,16 @@
                     <div class="col-sm-12 d-inline-block bg-light text-dark ml-2" style="height:400px;">Puzzle Three:</div>
                     <div class="col-sm-12 bg-light text-dark ml-2">
                         <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
-                            <img src="static/images/3Gnomes.png" alt="3 gnomes riddle">
-
-                            <form action="/puzzle/{{this_puzzle.id}}/answer" method="POST">
-                                <p>H_ _ _ &nbsp;  _ _ &nbsp; e _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ v _ _, &nbsp; S _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.</p>
+                            <img src="{% static '/images/gnomes.jpg' %}" alt="3 gnomes riddle">
+                            <p>H_ _ _ &nbsp;  _ _ &nbsp; e _ _ _, &nbsp; _ _ _ &nbsp; _o &nbsp; _ v _ _, &nbsp; s _ _ _ _ &nbsp; _ _ &nbsp; _ _ _l.</p>
+                        </div>
+                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">
+                            <form action="{{this_puzzle.id}}/answer_3" method="POST">
+                                {% csrf_token %}
                                 <input type="text" id="answer" name="answer">
                                 <input type="submit" value="Solve Riddle">
                             </form>
                         </div>
-                        <div class="col-sm-4 d-inline-block bg-light text-dark ml-2" style="height:150px;">{{puzzle.answer}}</div>
                     </div>
                 </div>
     </div>
