--- a/themes/mythical_labyrinth_escape/templates/results.html
+++ b/themes/mythical_labyrinth_escape/templates/results.html
@@ -32,15 +32,15 @@
     </nav>
 
     <!-- Video-->
- <!--    <div class="video-background">
+    <div class="video-background">
         <div class="video-wrap">
             <div id="video">
                 <video autoplay muted loop playsinline id="myVideo">
-                    <source src="video.mp4" type="video/mp4">
+                    <source src="{% static 'assets/vid/video.mp4' %}" type="video/mp4">
                 </video>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- Middle Content-->
     <div class="caption text-center">
@@ -54,16 +54,14 @@
                             <table id="table1" class="table table-striped table-bordered">
                                 <tr>
                                     <th>User Name</th>
-                                    <th>Theme title</th>
-                                    <th>Description</th>
+                                    <th>Theme title</th>                                  
                                     <th>Status</th>
                                     <th>Time</th>
                                 </tr>
                                 {% for results_player in queryachievements %}
                                 <tr>
-                                    <td>{{ results_player.player.username }}</td>
-                                    <td>{{ results_player.title }}</td>
-                                    <td>{{ results_player.description }}</td>
+                                    <td>{{ results_player.players.username }}</td>
+                                    <td>{{ results_player.theme.title }}</td>                                    
                                     <td>{{ results_player.status }}</td>
                                     <td>{{ results_player.timer }}</td>
                                 </tr>
@@ -91,15 +89,13 @@
                                 <tr>
                                     <th>User Name</th>
                                     <th>Theme title</th>
-                                    <th>Description</th>
                                     <th>Status</th>
                                     <th>Time</th>
                                 </tr>
                                 {% for leaderboard_results in queryleaderboard %}
                                 <tr>
-                                    <td>{{ leaderboard_results.player.username }}</td>
-                                    <td>{{ leaderboard_results.title }}</td>
-                                    <td>{{ leaderboard_results.description }}</td>
+                                    <td>{{ leaderboard_results.players.username }}</td>
+                                    <td>{{ leaderboard_results.theme.title }}</td>
                                     <td>{{ leaderboard_results.status }}</td>
                                     <td>{{ leaderboard_results.timer }}</td>
                                 </tr>
